# qtreetabs-qt5

./: .gitignore  CMakeLists.txt  build.sh  qtreetabs.pri  qtreetabs.pro
examples/: CMakeLists.txt  Makefile  basic.cpp  examples.pro
plugins/: plugins.pro  qtreetabsdesignerplugin.cpp  qtreetabsdesignerplugin.h
src/: opentab.cpp  opentab.h  qtreetabs.cpp  qtreetabs.h  qtreetabs.ui  src.pro
src/js/: localscript.cpp  localscript.h  resources.qrc  tab.class.js  tabcreator.class.js  tabs.js
src/web/: tabs.css
web/: tabs.css  tabs.html  web.qrc
